--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,25 +1,39 @@
-.div1{
-    width: 15px;
-    height: 15px;
-    background-color: red;
-    border-radius: 20px;
-    margin-left: 5px;
+.divfoot{
+    width: 20%;
+    height: 100vh;
+    background-color: rgb(35, 33, 33);
 }
-.div2{
-    width: 15px;
-    height: 15px;
-    background-color: orange;
-    border-radius: 20px;
-    margin-left: 5px;
+.navbar1{
+    height: 70px;
 }
-.div3{
-    width: 15px;
-    height: 15px;
-    background-color: green;
-    border-radius: 20px;
-    margin-left: 5px;
+.navbar1>div{
+    width: 95%;
+    margin: auto;
 }
-nav{
-    width: 100%;
-    height: 60px;
-}   
+.inp1{
+    width: 85%;
+    border: none;
+    outline: none;
+    background: none;
+}
+.input1{
+    background-color: rgb(206, 206, 206);
+    height: 35px;
+}
+@media screen and (max-width:991px) {
+    .navbar2{
+        display: none;
+    }
+    .input1{
+        display: none;
+    }
+}
+.i1{
+    font-size: 20pt;
+}
+
+@media screen and (min-width:991px) {
+    .i1{
+        display: none;
+    }
+}
